tests/golden/type_errors/typed_array_function_return_mismatch.cd
fun bad(): [number] {
  return [1, "bad"];
}
